# CyberSecurity-Module-for-dataset

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: IAeadEncryptor.hpp  IkeyDeriver.hpp  IrandomProvider.hpp  aes256GcmCipher.hpp  commandLinePanser.hpp  osRandomProvider.hpp  pbkdf2.hpp  pch.hpp  securityModule.hpp  types.hpp
src/: aes256GcmCipher.cpp  commandLinePanser.cpp  osRandomProvider.cpp  pbkdf2.cpp  securityModule.cpp  types.cpp
tests/: testOsProvider.cpp  testPbkdf2.cpp
